daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: example-daemonset
  labels:
    app: example-app
spec:
  selector:
    matchLabels:
      name: example-pod
  template:
    metadata:
      labels:
        name: example-pod
    spec:
      containers:
      - name: example-container
        image: nginx:latest
