pod_environment.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-environment
spec:
  containers:
  - name: my-ubuntu
    image: ubuntu:24.04
    command: ["sleep"]
    args: ["infinity"]
