pod_init_container.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-initialization
spec:
  containers:
  - name: app-container
    image: ubuntu:24.04
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - name: shared-data
      mountPath: /app/shared

  volumes:
  - name: shared-data
    emptyDir: {}
