deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  # strategy:
  #   type: "RollingUpdate"
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        # changed 1.14.2 to 1.22.1
        image: nginx:1.22.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-np-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cl-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-lb-svc
# spec:
#   selector:
#     app: nginx
#   type: LoadBalancer
#   ports:
#   - name: http
#     port: 80
#     targetPort: 80
