pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
      name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: nginx-service-port
    protocol: TCP
    port: 80 # This is the port number which makes a service visible to other services running within the same K8s cluster
    targetPort: http-web-svc # This port is the port on the POD where the service is running.
